# titan-command-v21

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh
backend/: inference.py  main.py  my_env.py
frontend/: app.py
scratch/: verify_evaluator_interface.py
server/: app.py
tasks/: graders.py
titan-command-v8/backend/: test_agent.py
