[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-command-v21"
version = "21.0.0"
description = "High-fidelity emergency triage simulation for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit",
    "plotly",
    "requests",
    "pandas",
    "numpy",
    "pyyaml"
]

[project.scripts]
titan-command = "main:app"

[tool.setuptools]
py-modules = ["main", "my_env", "inference", "app"]