[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-command-v21"
version = "21.0.0"
description = "High-fidelity emergency triage simulation for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit",
    "plotly",
    "requests",
    "pandas",
    "numpy",
    "pyyaml"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["backend", "frontend", "server", "tasks"]